# rice

./: .gitignore  links.map  setup-links  theme.json
apps/hyperlaunch/: Cargo.toml  build.rs  tauri.conf.json
apps/hyperlaunch/frontend/: index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
apps/hyperlaunch/src/: main.rs
dots/hypr/: hyprland.conf
dots/kitty/: kitty.conf
dots/qutebrowser/: config.py  startpage.html
dots/waybar/: config  style.css
scripts/: apply_theme.py  setup-links
