[package]
name = "hyperlaunch"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
regex = "1"
walkdir = "2"
which = "6"
dirs = "5"
base64 = "0.22"
ignore = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
